fixed the sidebar
but the help portion is still not visible

--- a/frontend/src/pages/SideBarSection/sidebar.scss
+++ b/frontend/src/pages/SideBarSection/sidebar.scss
@@ -26,10 +26,12 @@
 
 .sideBar{
     margin-top: auto;
-    background:var(--Green);
+    background: var(--Green);
     box-shadow: 1px 0px 4px var(--greyText);
     gap: 1rem;
-    overflow:auto;
+    overflow-y: auto; /* Change overflow property */
+    
+    
 
     .menulists{
         background-color: var(--Green);
